--- a/index.html
+++ b/index.html
@@ -10,53 +10,94 @@
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
       crossorigin="anonymous"
     />
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
     <!-- CSS Link -->
     <link rel="stylesheet" href="./style.css" />
     <title>Aj's Portfolio</title>
   </head>
   <body>
-    <!-- Hero Landing -->
-    <!-- Nav-Bar -->
-    <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-light">
-      <h5>Aaron White</h5>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
+    <!-- Navbar -->
+    <nav
+      id="theNavBar"
+      class="navbar navbar-expand-lg navbar-dark sticky-top bg-transparent"
+    >
+      <div class="d-flex flex-grow-1">
+        <span class="w-100 d-lg-none d-block"
+          ><!-- hidden spacer to center brand on mobile --></span
+        >
+        <h5 class="navbar-brand" href="#" style="color: #40413e">
+          Aaron White
+        </h5>
+        <div class="w-100 text-right">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#myNavbar"
+          >
+            <span class="navbar-toggler-icon bg-dark"></span>
+          </button>
+        </div>
+      </div>
+      <div
+        class="collapse navbar-collapse flex-grow-1 text-right"
+        id="myNavbar"
       >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#"
-              >Home <span class="sr-only">(current)</span></a
-            >
+        <ul class="navbar-nav ml-auto flex-nowrap">
+          <li class="nav-item">
+            <a href="#" class="nav-link" style="color: #40413e">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a href="#" class="nav-link" style="color: #40413e">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Skills</a>
+            <a href="#" class="nav-link" style="color: #40413e">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Projects</a>
+            <a href="#" class="nav-link" style="color: #40413e">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a href="#" class="nav-link" style="color: #40413e">Contact</a>
           </li>
         </ul>
       </div>
     </nav>
-    <section class="intro-section">
-      <div class="bg-image">
-        <img class="hero-image" src="./assets/theStag.jpg" alt="" srcset="" />
+    <!-- Hero Landing -->
+    <div class="banner-area">
+      <div class="wrapper">
+        <div class="text-content">
+          <h2>Aaron White</h2>
+          <h3>Front-End Web Developer</h3>
+        </div>
       </div>
-    </section>
+    </div>
+    <!-- About Me -->
+    <div class="aboutMe">
+      <div class="aboutMeTitle"><h2>About Me</h2></div>
+      <div class="aboutMeText">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
+          voluptatem accusamus voluptates esse. Nesciunt saepe quas provident
+          alias, dolor dignissimos esse consequuntur voluptates fugiat eum
+          consectetur ex natus dolore culpa.Iusto eius numquam itaque, cumque
+          aut excepturi ad consequatur unde. Beatae facilis fuga inventore
+          blanditiis alias quis dolorem adipisci! Id atque excepturi, esse sed
+          non a sit voluptas saepe repellendus. Lorem ipsum dolor sit amet
+          consectetur adipisicing elit. Qui voluptatem accusamus voluptates
+          esse. Nesciunt saepe quas provident alias, dolor dignissimos esse
+          consequuntur voluptates fugiat eum consectetur ex natus dolore
+          culpa.Iusto eius numquam itaque, cumque aut excepturi ad consequatur
+          unde. Beatae facilis fuga inventore blanditiis alias quis dolorem
+          adipisci! Id atque excepturi, esse sed non a sit voluptas saepe
+          repellendus.
+        </p>
+      </div>
+    </div>
     <!-- THis is the JS scripts for Bootstrap -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
