--- a/index.html
+++ b/index.html
@@ -76,28 +76,158 @@
         </div>
       </div>
     </div>
-    <!-- About Me -->
-    <div class="aboutMe">
-      <div class="aboutMeTitle"><h2>About Me</h2></div>
-      <div class="aboutMeText">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
-          voluptatem accusamus voluptates esse. Nesciunt saepe quas provident
-          alias, dolor dignissimos esse consequuntur voluptates fugiat eum
-          consectetur ex natus dolore culpa.Iusto eius numquam itaque, cumque
-          aut excepturi ad consequatur unde. Beatae facilis fuga inventore
-          blanditiis alias quis dolorem adipisci! Id atque excepturi, esse sed
-          non a sit voluptas saepe repellendus. Lorem ipsum dolor sit amet
-          consectetur adipisicing elit. Qui voluptatem accusamus voluptates
-          esse. Nesciunt saepe quas provident alias, dolor dignissimos esse
-          consequuntur voluptates fugiat eum consectetur ex natus dolore
-          culpa.Iusto eius numquam itaque, cumque aut excepturi ad consequatur
-          unde. Beatae facilis fuga inventore blanditiis alias quis dolorem
-          adipisci! Id atque excepturi, esse sed non a sit voluptas saepe
-          repellendus.
-        </p>
+    <!-- About Me Section-->
+    <div id="aboutMe" class="section">
+      <div class="sectionTitle"><h2>About Me</h2></div>
+      <div class="personalBanner">
+        <div class="profile">
+          <img id="profileImg" src="./assets/profile.jpg" alt="" />
+        </div>
+        <div class="aboutMeText">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
+            voluptatem accusamus voluptates esse. Nesciunt saepe quas provident
+            alias, dolor dignissimos esse consequuntur voluptates fugiat eum
+            consectetur ex natus dolore culpa.Iusto eius numquam itaque, cumque
+            aut excepturi ad consequatur unde. Beatae facilis fuga inventore
+            blanditiis alias quis dolorem adipisci! Id atque excepturi, esse sed
+            non a sit voluptas saepe repellendus. Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Qui voluptatem accusamus voluptates
+            esse. Nesciunt saepe quas provident alias, dolor dignissimos esse
+            consequuntur voluptates fugiat eum consectetur ex natus dolore
+            culpa.Iusto eius numquam itaque, cumque aut excepturi ad consequatur
+            unde. Beatae facilis fuga inventore blanditiis alias quis dolorem
+            adipisci! Id atque excepturi, esse sed non a sit voluptas saepe
+            repellendus.
+          </p>
+        </div>
       </div>
     </div>
+    <!-- Skills Section-->
+    <div id="skills" class="section">
+      <div class="sectionTitle"><h2>Skills</h2></div>
+      <ul>
+        <li>
+          <a href="#">
+            <img class="icon" src="./assets/html5.svg" alt="" />
+            <h5>HTML & CSS</h5>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img class="icon" src="./assets/javascript.svg" alt="" />
+            <h5>Javascript</h5>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img class="icon" src="./assets/adobephotoshop.svg" alt="" />
+            <h5>Photoshop</h5>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img class="icon" src="./assets/github.svg" alt="" />
+            <h5>GitHub</h5>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img class="icon" src="./assets/python.svg" alt="" />
+            <h5>Python</h5>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <!-- Projects Section -->
+    <div id="projects" class="section">
+      <div class="sectionTitle"><h2>Projects</h2></div>
+    </div>
+    <!-- Enter Card Code -->
+    <div class="card-columns">
+      <div class="card">
+        <img src="./assets/forest.jpg" class="card-img-top" alt="..." />
+        <div class="card-body">
+          <h5 class="card-title">Card title that wraps to a new line</h5>
+          <p class="card-text">
+            This is a longer card with supporting text below as a natural
+            lead-in to additional content. This content is a little bit longer.
+          </p>
+        </div>
+      </div>
+      <div class="card p-3">
+        <blockquote class="blockquote mb-0 card-body">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+            posuere erat a ante.
+          </p>
+          <footer class="blockquote-footer">
+            <small class="text-muted">
+              Someone famous in <cite title="Source Title">Source Title</cite>
+            </small>
+          </footer>
+        </blockquote>
+      </div>
+      <div class="card">
+        <img src="./assets/theStag.jpg" class="card-img-top" alt="..." />
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">
+            This card has supporting text below as a natural lead-in to
+            additional content.
+          </p>
+        </div>
+      </div>
+      <div class="card bg-dark text-white text-center p-3">
+        <blockquote class="blockquote mb-0">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+            posuere erat.
+          </p>
+          <footer class="blockquote-footer text-white">
+            <small>
+              Someone famous in <cite title="Source Title">Source Title</cite>
+            </small>
+          </footer>
+        </blockquote>
+      </div>
+      <div class="card text-center">
+        <img src="./assets/forest.jpg" class="card-img-top" alt="..." />
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">
+            This card has a regular title and short paragraphy of text below it.
+          </p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="./assets/profile.jpg" class="card-img-top" alt="..." />
+      </div>
+      <div class="card p-3 text-right">
+        <blockquote class="blockquote mb-0">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+            posuere erat a ante.
+          </p>
+          <footer class="blockquote-footer">
+            <small class="text-muted">
+              Someone famous in <cite title="Source Title">Source Title</cite>
+            </small>
+          </footer>
+        </blockquote>
+      </div>
+      <div class="card">
+        <img src="./assets/theStag.jpg" class="card-img-top" alt="..." />
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">
+            This card has supporting text below as a natural lead-in to
+            additional content.
+          </p>
+        </div>
+      </div>
+    </div>
+    <!-- End Card Code -->
     <!-- THis is the JS scripts for Bootstrap -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
