Added conteact section

--- a/index.html
+++ b/index.html
@@ -109,31 +109,31 @@
       <ul>
         <li>
           <a href="#">
-            <img class="icon" src="./assets/html5.svg" alt="" />
+            <img class="skill-icon" src="./assets/html5.svg" alt="" />
             <h5>HTML & CSS</h5>
           </a>
         </li>
         <li>
           <a href="#">
-            <img class="icon" src="./assets/javascript.svg" alt="" />
+            <img class="skill-icon" src="./assets/javascript.svg" alt="" />
             <h5>Javascript</h5>
           </a>
         </li>
         <li>
           <a href="#">
-            <img class="icon" src="./assets/adobephotoshop.svg" alt="" />
+            <img class="skill-icon" src="./assets/adobephotoshop.svg" alt="" />
             <h5>Photoshop</h5>
           </a>
         </li>
         <li>
           <a href="#">
-            <img class="icon" src="./assets/github.svg" alt="" />
+            <img class="skill-icon" src="./assets/github.svg" alt="" />
             <h5>GitHub</h5>
           </a>
         </li>
         <li>
           <a href="#">
-            <img class="icon" src="./assets/python.svg" alt="" />
+            <img class="skill-icon" src="./assets/python.svg" alt="" />
             <h5>Python</h5>
           </a>
         </li>
@@ -142,92 +142,171 @@
     <!-- Projects Section -->
     <div id="projects" class="section">
       <div class="sectionTitle"><h2>Projects</h2></div>
-    </div>
-    <!-- Enter Card Code -->
-    <div class="card-columns">
-      <div class="card">
-        <img src="./assets/forest.jpg" class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h5 class="card-title">Card title that wraps to a new line</h5>
-          <p class="card-text">
-            This is a longer card with supporting text below as a natural
-            lead-in to additional content. This content is a little bit longer.
-          </p>
+      <!-- Enter Card Code -->
+      <div class="card-columns">
+        <div class="card">
+          <img src="./assets/forest.jpg" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Card title that wraps to a new line</h5>
+            <p class="card-text">
+              This is a longer card with supporting text below as a natural
+              lead-in to additional content. This content is a little bit
+              longer.
+            </p>
+          </div>
         </div>
-      </div>
-      <div class="card p-3">
-        <blockquote class="blockquote mb-0 card-body">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-            posuere erat a ante.
-          </p>
-          <footer class="blockquote-footer">
-            <small class="text-muted">
-              Someone famous in <cite title="Source Title">Source Title</cite>
-            </small>
-          </footer>
-        </blockquote>
-      </div>
-      <div class="card">
-        <img src="./assets/theStag.jpg" class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            This card has supporting text below as a natural lead-in to
-            additional content.
-          </p>
+        <div class="card p-3">
+          <blockquote class="blockquote mb-0 card-body">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+              posuere erat a ante.
+            </p>
+            <footer class="blockquote-footer">
+              <small class="text-muted">
+                Someone famous in <cite title="Source Title">Source Title</cite>
+              </small>
+            </footer>
+          </blockquote>
         </div>
-      </div>
-      <div class="card bg-dark text-white text-center p-3">
-        <blockquote class="blockquote mb-0">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-            posuere erat.
-          </p>
-          <footer class="blockquote-footer text-white">
-            <small>
-              Someone famous in <cite title="Source Title">Source Title</cite>
-            </small>
-          </footer>
-        </blockquote>
-      </div>
-      <div class="card text-center">
-        <img src="./assets/forest.jpg" class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            This card has a regular title and short paragraphy of text below it.
-          </p>
+        <div class="card">
+          <img src="./assets/theStag.jpg" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              This card has supporting text below as a natural lead-in to
+              additional content.
+            </p>
+          </div>
         </div>
-      </div>
-      <div class="card">
-        <img src="./assets/profile.jpg" class="card-img-top" alt="..." />
-      </div>
-      <div class="card p-3 text-right">
-        <blockquote class="blockquote mb-0">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-            posuere erat a ante.
-          </p>
-          <footer class="blockquote-footer">
-            <small class="text-muted">
-              Someone famous in <cite title="Source Title">Source Title</cite>
-            </small>
-          </footer>
-        </blockquote>
-      </div>
-      <div class="card">
-        <img src="./assets/theStag.jpg" class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            This card has supporting text below as a natural lead-in to
-            additional content.
-          </p>
+        <div class="card bg-dark text-white text-center p-3">
+          <blockquote class="blockquote mb-0">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+              posuere erat.
+            </p>
+            <footer class="blockquote-footer text-white">
+              <small>
+                Someone famous in <cite title="Source Title">Source Title</cite>
+              </small>
+            </footer>
+          </blockquote>
+        </div>
+        <div class="card text-center">
+          <img src="./assets/forest.jpg" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              This card has a regular title and short paragraphy of text below
+              it.
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./assets/profile.jpg" class="card-img-top" alt="..." />
+        </div>
+        <div class="card p-3 text-right">
+          <blockquote class="blockquote mb-0">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+              posuere erat a ante.
+            </p>
+            <footer class="blockquote-footer">
+              <small class="text-muted">
+                Someone famous in <cite title="Source Title">Source Title</cite>
+              </small>
+            </footer>
+          </blockquote>
+        </div>
+        <div class="card">
+          <img src="./assets/theStag.jpg" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              This card has supporting text below as a natural lead-in to
+              additional content.
+            </p>
+          </div>
         </div>
       </div>
     </div>
     <!-- End Card Code -->
+    <hr />
+    <!-- Contact Me Section -->
+    <div id="contactME" class="section">
+      <div class="sectionTitle"><h2>Contact Me</h2></div>
+      <div id="contact-container" class="container">
+        <div id="form">
+          <!-- The Form -->
+          <form
+            id="fs-frm"
+            name="simple-contact-form"
+            accept-charset="utf-8"
+            action="https://formspree.io/f/mzbkawyw"
+            method="post"
+          >
+            <fieldset id="fs-frm-inputs">
+              <label for="full-name">Full Name</label>
+              <input
+                class="form-control"
+                type="text"
+                name="name"
+                id="full-name"
+                placeholder="First and Last"
+                required=""
+              />
+              <label for="email-address">Email Address</label>
+              <input
+                class="form-control"
+                type="email"
+                name="_replyto"
+                id="email-address"
+                placeholder="youremail@domain.com"
+                required=""
+              />
+              <label for="message">Message</label>
+              <textarea
+                class="form-control"
+                rows="5"
+                name="message"
+                id="message"
+                placeholder="Your message"
+                required=""
+              ></textarea>
+              <input
+                type="hidden"
+                name="_subject"
+                id="email-subject"
+                value="Contact Form Submission"
+              />
+            </fieldset>
+            <input type="submit" value="Submit" />
+          </form>
+        </div>
+        <div class="col-md-4 mt-4">
+          <div class="card profile-card-5">
+            <div class="card-img-block">
+              <img
+                class="card-img-top"
+                src="https://images.unsplash.com/photo-1517832207067-4db24a2ae47c"
+                alt="Card image cap"
+              />
+            </div>
+            <div class="card-body pt-0">
+              <h5 class="card-title text-center">
+                Interested in knowing me better
+              </h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Footer -->
+
+    <!-- Footer End-->
     <!-- THis is the JS scripts for Bootstrap -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -239,5 +318,7 @@
       integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
       crossorigin="anonymous"
     ></script>
+    <!-- Javascript Link -->
+    <script src="./script.js"></script>
   </body>
 </html>
