--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
     <!-- Bootstrap Link -->
     <link
       rel="stylesheet"
@@ -22,17 +23,12 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav
-      id="theNavBar"
-      class="navbar navbar-expand-lg navbar-dark sticky-top bg-transparent"
-    >
+    <nav id="theNavBar" class="navbar navbar-expand-lg navbar-dark sticky-top bg-transparent">
       <div class="d-flex flex-grow-1">
         <span class="w-100 d-lg-none d-block"
           ><!-- hidden spacer to center brand on mobile --></span
         >
-        <h5 class="navbar-brand" href="#" style="color: #40413e">
-          Aaron White
-        </h5>
+        <h5 class="navbar-brand" href="#" style="color: #40413e">Aaron White</h5>
         <div class="w-100 text-right">
           <button
             class="navbar-toggler"
@@ -44,10 +40,7 @@
           </button>
         </div>
       </div>
-      <div
-        class="collapse navbar-collapse flex-grow-1 text-right"
-        id="myNavbar"
-      >
+      <div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar">
         <ul class="navbar-nav ml-auto flex-nowrap">
           <li class="nav-item">
             <a href="#" class="nav-link" style="color: #40413e">Home</a>
@@ -85,20 +78,17 @@
         </div>
         <div class="aboutMeText">
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
-            voluptatem accusamus voluptates esse. Nesciunt saepe quas provident
-            alias, dolor dignissimos esse consequuntur voluptates fugiat eum
-            consectetur ex natus dolore culpa.Iusto eius numquam itaque, cumque
-            aut excepturi ad consequatur unde. Beatae facilis fuga inventore
-            blanditiis alias quis dolorem adipisci! Id atque excepturi, esse sed
-            non a sit voluptas saepe repellendus. Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Qui voluptatem accusamus voluptates
-            esse. Nesciunt saepe quas provident alias, dolor dignissimos esse
-            consequuntur voluptates fugiat eum consectetur ex natus dolore
-            culpa.Iusto eius numquam itaque, cumque aut excepturi ad consequatur
-            unde. Beatae facilis fuga inventore blanditiis alias quis dolorem
-            adipisci! Id atque excepturi, esse sed non a sit voluptas saepe
-            repellendus.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui voluptatem accusamus
+            voluptates esse. Nesciunt saepe quas provident alias, dolor dignissimos esse
+            consequuntur voluptates fugiat eum consectetur ex natus dolore culpa.Iusto eius numquam
+            itaque, cumque aut excepturi ad consequatur unde. Beatae facilis fuga inventore
+            blanditiis alias quis dolorem adipisci! Id atque excepturi, esse sed non a sit voluptas
+            saepe repellendus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
+            voluptatem accusamus voluptates esse. Nesciunt saepe quas provident alias, dolor
+            dignissimos esse consequuntur voluptates fugiat eum consectetur ex natus dolore
+            culpa.Iusto eius numquam itaque, cumque aut excepturi ad consequatur unde. Beatae
+            facilis fuga inventore blanditiis alias quis dolorem adipisci! Id atque excepturi, esse
+            sed non a sit voluptas saepe repellendus.
           </p>
         </div>
       </div>
@@ -149,17 +139,15 @@
           <div class="card-body">
             <h5 class="card-title">Card title that wraps to a new line</h5>
             <p class="card-text">
-              This is a longer card with supporting text below as a natural
-              lead-in to additional content. This content is a little bit
-              longer.
+              This is a longer card with supporting text below as a natural lead-in to additional
+              content. This content is a little bit longer.
             </p>
           </div>
         </div>
         <div class="card p-3">
           <blockquote class="blockquote mb-0 card-body">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-              posuere erat a ante.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
             </p>
             <footer class="blockquote-footer">
               <small class="text-muted">
@@ -173,21 +161,15 @@
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">
-              This card has supporting text below as a natural lead-in to
-              additional content.
+              This card has supporting text below as a natural lead-in to additional content.
             </p>
           </div>
         </div>
         <div class="card bg-dark text-white text-center p-3">
           <blockquote class="blockquote mb-0">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-              posuere erat.
-            </p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat.</p>
             <footer class="blockquote-footer text-white">
-              <small>
-                Someone famous in <cite title="Source Title">Source Title</cite>
-              </small>
+              <small> Someone famous in <cite title="Source Title">Source Title</cite> </small>
             </footer>
           </blockquote>
         </div>
@@ -196,8 +178,7 @@
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">
-              This card has a regular title and short paragraphy of text below
-              it.
+              This card has a regular title and short paragraphy of text below it.
             </p>
           </div>
         </div>
@@ -207,8 +188,7 @@
         <div class="card p-3 text-right">
           <blockquote class="blockquote mb-0">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-              posuere erat a ante.
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
             </p>
             <footer class="blockquote-footer">
               <small class="text-muted">
@@ -222,8 +202,7 @@
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">
-              This card has supporting text below as a natural lead-in to
-              additional content.
+              This card has supporting text below as a natural lead-in to additional content.
             </p>
           </div>
         </div>
@@ -292,12 +271,10 @@
               />
             </div>
             <div class="card-body pt-0">
-              <h5 class="card-title text-center">
-                Interested in knowing me better
-              </h5>
+              <h5 class="card-title text-center">Interested in knowing me better</h5>
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                Some quick example text to build on the card title and make up the bulk of the
+                card's content.
               </p>
             </div>
           </div>
